deploy/cicd/tekton/myproject-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: myproject
  name: myproject
spec:
  rules:
    - host: myproject.com
      http:
        paths:
          - backend:
              serviceName: el-myproject-git-repo
              servicePort: port-8080
            path: /el-myproject-git-repo
            pathType: Prefix
status:
  loadBalancer: {}
